<resources>
    <string name="app_name">To do list</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Titulo</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description">TODO</string>
    <string name="label_edit">edit</string>
    <string name="label_delete">delete</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui nenhuma tarefa</string>
</resources>